force-app/main/default/objects/Reserva_de_Evento__c/Reserva_de_Evento__c.object-meta.xml
<CustomObject>
    <label>Reserva de Evento</label>
    <nameField>
        <label>Nome de Reserva de Evento</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reserva de Eventos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>