force-app/main/default/objects/Reserva_de_Evento__c/fields/DataDoEvento__c.field-meta.xml
<CustomField>
    <fullName>DataDoEvento__c</fullName>
    <label>Data do Evento</label>
    <type>Date</type>
</CustomField>