force-app/main/default/objects/Reserva_de_Evento__c/fields/NomeDoCliente__c.field-meta.xml
<CustomField>
    <fullName>NomeDoCliente__c</fullName>
    <label>Nome do Cliente</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>