force-app/main/default/objects/Reserva_de_Evento__c/fields/NumeroDeParticipantes__c.field-meta.xml
<CustomField>
    <fullName>NumeroDeParticipantes__c</fullName>
    <label>Número de Participantes</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>