force-app/main/default/objects/Reserva_de_Evento__c/fields/ValorPorParticipante__c.field-meta.xml
<CustomField>
    <fullName>ValorPorParticipante__c</fullName>
    <label>Valor por Participante</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>