force-app/main/default/objects/Reserva_de_Evento__c/fields/ValorTotalDaReserva__c.field-meta.xml
<CustomField>
    <fullName>ValorTotalDaReserva__c</fullName>
    <formula>NumeroDeParticipantes__c *  ValorPorParticipante__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valor Total da Reserva</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>